@@ -70,7 +70,7 @@
 		if($DB_TYPE == "MYSQL")
 		{
 			$result=mysql_query($query,$DB);
-#
+
 			if(!$result)
 			{
 				echo "ERROR EXECUTING: $query<br>";
