@@ -24,6 +24,7 @@
 
 	include "include/config.inc.php";
 	show_header($page["title"],0,0);
+	insert_confirm_javascript();
 ?>
 
 <?php
@@ -52,8 +53,13 @@
 		}
 		elseif($HTTP_GET_VARS["register"]=="add")
 		{
-			$result=add_media( $HTTP_GET_VARS["userid"], $HTTP_GET_VARS["mediatypeid"], $HTTP_GET_VARS["sendto"],$HTTP_GET_VARS["severity"]);
+			$result=add_media( $HTTP_GET_VARS["userid"], $HTTP_GET_VARS["mediatypeid"], $HTTP_GET_VARS["sendto"],$HTTP_GET_VARS["severity"],$HTTP_GET_VARS["active"]);
 			show_messages($result,"Media added","Cannot add media");
+		}
+		elseif($HTTP_GET_VARS["register"]=="update")
+		{
+			$result=update_media($HTTP_GET_VARS["mediaid"], $HTTP_GET_VARS["userid"], $HTTP_GET_VARS["mediatypeid"], $HTTP_GET_VARS["sendto"],$HTTP_GET_VARS["severity"],$HTTP_GET_VARS["active"]);
+			show_messages($result,"Media updated","Cannot update media");
 		}
 		elseif($HTTP_GET_VARS["register"]=="delete")
 		{
@@ -110,7 +116,7 @@
 		}
 		echo "</TD>";
 		echo "<TD>";
-		echo "<A HREF=\"media.php?register=delete&mediaid=$mediaid&userid=".$HTTP_GET_VARS["userid"]."\">Delete</A>";
+		echo "<A HREF=\"media.php?register=change&mediaid=$mediaid&userid=".$HTTP_GET_VARS["userid"]."\">Change</A>";
 		echo "</TD>";
 		echo "</TR>";
 	}
@@ -121,6 +127,23 @@
 </TABLE>
 
 <?php
+	if(isset($HTTP_GET_VARS["mediaid"]))
+	{
+		$sql="select m.severity,m.sendto,m.active,m.mediatypeid from media m where m.mediaid=".$HTTP_GET_VARS["mediaid"];
+		$result=DBselect($sql);
+		$severity=DBget_field($result,0,0);
+		$sendto=DBget_field($result,0,1);
+		$active=DBget_field($result,0,2);
+		$mediatypeid=DBget_field($result,0,3);
+	}
+	else
+	{
+		$sendto="";
+		$severity=63;
+		$mediatypeid=-1;
+		$active=0;
+	}
+
 	echo "<br>";
 	show_table2_header_begin();
 	echo "New media";
@@ -128,6 +151,10 @@
 	show_table2_v_delimiter();
 	echo "<form method=\"get\" action=\"media.php\">";
 	echo "<input name=\"userid\" type=\"hidden\" value=".$HTTP_GET_VARS["userid"].">";
+	if(isset($HTTP_GET_VARS["mediaid"]))
+	{
+		echo "<input name=\"mediaid\" type=\"hidden\" value=".$HTTP_GET_VARS["mediaid"].">";
+	}
 	echo "Type";
 	show_table2_h_delimiter();
 	echo "<select class=\"biginput\" name=\"mediatypeid\" size=1>";
@@ -135,29 +162,64 @@
 	$result=DBselect($sql);
 	while($row=DBfetch($result))
 	{
-		echo "<OPTION VALUE=\"".$row["mediatypeid"]."\">".$row["description"];
+		if($row["mediatypeid"] == $mediatypeid)
+		{
+			echo "<OPTION VALUE=\"".$row["mediatypeid"]."\" SELECTED>".$row["description"];
+		}
+		else
+		{
+			echo "<OPTION VALUE=\"".$row["mediatypeid"]."\">".$row["description"];
+		}
+		
 	}
 	echo "</SELECT>";
 
 	show_table2_v_delimiter();
 	echo "Send to";
 	show_table2_h_delimiter();
-	echo "<input class=\"biginput\" name=\"sendto\" size=20>";
+	echo "<input class=\"biginput\" name=\"sendto\" size=20 value='$sendto'>";
 
 	show_table2_v_delimiter();
-	echo "Use if";
+	echo "Use if severity";
 	show_table2_h_delimiter();
 	echo "<select multiple class=\"biginput\" name=\"severity[]\" size=\"5\">";
-	echo "<option value=\"0\" selected>Not classified";
-	echo "<option value=\"1\" selected>Information";
-	echo "<option value=\"2\" selected>Warning";
-	echo "<option value=\"3\" selected>Average";
-	echo "<option value=\"4\" selected>High";
-	echo "<option value=\"5\" selected>Disaster";
+	$selected=iif( (1&$severity) == 1,"selected","");
+	echo "<option value=\"0\" $selected>Not classified";
+	$selected=iif( (2&$severity) == 2,"selected","");
+	echo "<option value=\"1\" $selected>Information";
+	$selected=iif( (4&$severity) == 4,"selected","");
+	echo "<option value=\"2\" $selected>Warning";
+	$selected=iif( (8&$severity) == 8,"selected","");
+	echo "<option value=\"3\" $selected>Average";
+	$selected=iif( (16&$severity) ==16,"selected","");
+	echo "<option value=\"4\" $selected>High";
+	$selected=iif( (32&$severity) ==32,"selected","");
+	echo "<option value=\"5\" $selected>Disaster";
+	echo "</select>";
+
+	show_table2_v_delimiter();
+	echo "Status";
+	show_table2_h_delimiter();
+	echo "<select class=\"biginput\" name=\"active\" size=1>";
+	if($active == 0)
+	{
+		echo "<OPTION VALUE=\"0\" SELECTED> Enabled";
+		echo "<OPTION VALUE=\"1\"> Disabled";
+	}
+	else
+	{
+		echo "<OPTION VALUE=\"0\"> Enabled";
+		echo "<OPTION VALUE=\"1\" SELECTED> Disabled";
+	}
 	echo "</select>";
 
 	show_table2_v_delimiter2();
 	echo "<input type=\"submit\" name=\"register\" value=\"add\">";
+	if(isset($mediaid))
+	{
+		echo "<input type=\"submit\" name=\"register\" value=\"update\">";
+		echo "<input type=\"submit\" name=\"register\" value=\"delete\" onClick=\"return Confirm('Delete selected media?');\">";
+	}
 
 	show_table2_header_end();
 
